--- a/Public/Css/news.css
+++ b/Public/Css/news.css
@@ -1,65 +1,120 @@
 @charset "utf-8";
-#news h3 {
-    margin: 1px 0 0 0;
-    height: 60px;
-    font-family: "Microsoft YaHei",微软雅黑,"Microsoft JhengHei",SimHei,STHeiti,STXihei;
-    font-size: 100%;
-    color: white;
-    font-size: 110%;
-    line-height: 60px;
+@media screen and (min-width:600px){
+    #news h3 {
+        margin: 1px 0 0 0;
+        height: 60px;
+        font-family: "Microsoft YaHei",微软雅黑,"Microsoft JhengHei",SimHei,STHeiti,STXihei;
+        color: white;
+        font-size: 110%;
+        line-height: 60px;
+    }
+    #news h3 .tips {
+        display: block;
+        float: left;
+        width: 115px;
+        height: 100%;
+        padding-left: 20px;
+        background-color: #21b6f7;
+        letter-spacing: 2px;
+    }
+    #news h3 .tips-date {
+        display: block;
+        float: left;
+        width: 210px;
+        height: 100%;
+        padding-left: 15px;
+        background-color: #009ed6;
+        letter-spacing: 1px;
+    }
+    #news a {
+        display: block;
+        height: 120px;
+        padding: 10px;
+        border-bottom: 3px solid #f7f7f7;
+        color: black;
+    }
+    #news a div {
+        float: left;
+        width:120px;
+        height: 120px;
+        background: #f7f7f7 url(../Images/thumb-default.png) no-repeat;
+    }
+    #news a img {
+        width:120px;
+        height: 120px;
+    }
+    #news a span {
+        display: block;
+        float: left;
+        width: 400px;
+        height: 112px;
+        margin-left: 30px;
+        padding-top: 8px;
+        font-family: "Microsoft YaHei",微软雅黑,"Microsoft JhengHei",SimHei,STHeiti,STXihei;
+        font-weight: 600;
+        font-size: 120%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    #loading {
+        display: none;
+        padding: 10px 0;
+    }
+    #loading img {
+        margin-left: 280px;
+    }
 }
-#news h3 .tips {
-    display: block;
-    float: left;
-    width: 115px;
-    height: 100%;
-    padding-left: 20px;
-    background-color: #21b6f7;
-    letter-spacing: 2px;
-}
-#news h3 .tips-date {
-    display: block;
-    float: left;
-    width: 210px;
-    height: 100%;
-    padding-left: 15px;
-    background-color: #009ed6;
-    letter-spacing: 1px;
-}
-#news a {
-    display: block;
-    height: 120px;
-    padding: 10px;
-    border-bottom: 3px solid #f7f7f7;
-    color: black;
-}
-#news a div {
-    float: left;
-    width:120px;
-    height: 120px;
-    background: #f7f7f7 url(../Images/thumb-default.png) no-repeat;
-}
-#news a img {
-    width:120px;
-    height: 120px;
-}
-#news a span {
-    display: block;
-    float: left;
-    width: 400px;
-    height: 112px;
-    margin-left: 30px;
-    padding-top: 8px;
-    font-family: "Microsoft YaHei",微软雅黑,"Microsoft JhengHei",SimHei,STHeiti,STXihei;
-    font-weight: 600;
-    font-size: 120%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-#loading {
-    display: none;
-    padding: 10px 0;
-}
-#loading img {
-    margin-left: 280px;
+
+@media screen and (max-width:599px){
+    #news h3 {
+        margin: 1px 0 0 0;
+        height: 40px;
+        color: white;
+        line-height: 40px;
+        text-align: center;
+    }
+    #news h3 .tips {
+        display: block;
+        float: left;
+        width: 35%;
+        background-color: #21b6f7;
+        letter-spacing: 2px;
+    }
+    #news h3 .tips-date {
+        display: block;
+        float: left;
+        width: 65%;
+        background-color: #009ed6;
+        letter-spacing: 1px;
+    }
+    #news a {
+        display: block;
+        height: 95px;
+        padding: 4px;
+        border-bottom: 2px solid #f7f7f7;
+        color: black;
+        text-decoration: none;
+    }
+    #news a div {
+        float: left;
+        background: #f7f7f7 url(../Images/thumb-default.png) no-repeat;
+    }
+    #news a img {
+        width: 95px;
+    }
+    #news a span {
+        display: block;
+        padding: 8px 1px 0 5px;
+        font-weight: 600;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    #loading {
+        display: none;
+        padding: 5px 0;
+    }
+    #loading img {
+        display: block;
+        margin: 0 auto;
+    }
 }
