--- a/Public/Css/news.css
+++ b/Public/Css/news.css
@@ -37,11 +37,11 @@
         float: left;
         width:120px;
         height: 120px;
-        background: #f7f7f7 url(../Images/thumb-default.png) no-repeat;
+        background: #f7f7f7 url(../Images/thumb-default.png) no-repeat center center;
     }
     #news a img {
-        width:120px;
-        height: 120px;
+        width: 100%;
+        height: 100%;
     }
     #news a span {
         display: block;
@@ -95,17 +95,19 @@
         color: black;
         text-decoration: none;
     }
+    #news a img {
+        width: 100%;
+        height: 100%;
+    }
     #news a div {
         float: left;
-        background: #f7f7f7 url(../Images/thumb-default.png) no-repeat;
-    }
-    #news a img {
+        height: 100%;
         width: 95px;
+        background: #f7f7f7 url(../Images/thumb-default.png) no-repeat center center;
     }
     #news a span {
         display: block;
         padding: 8px 1px 0 5px;
-        font-weight: 600;
         overflow: hidden;
         text-overflow: ellipsis;
     }
