--- a/lib/View/news.html
+++ b/lib/View/news.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <title>知乎日报 - 满足你的好奇心</title>
         <link rel="stylesheet" href="http://daily.zhihu.com/css/share.css">
-        <link rel="stylesheet" type="text/css" href="Public/Css/news.css">
+        <link rel="stylesheet" type="text/css" href="static/css/news.css">
         <link rel="shortcut icon" href="http://daily.zhihu.com/favicon.ico">
         <base href="." target="_blank">
     </head>
@@ -22,12 +22,12 @@
         </div>
         <div class="main-wrap content-wrap" id="news" curdate=""></div>
         <div class="main-wrap content-wrap" id="loading">
-            <img src="Public/Images/loading.gif"/>
+            <img src="static/images/loading.gif"/>
         </div>
         <div class="footer">
             <a href="http://www.zhihu.com/">知乎网</a> · © 2013 知乎
         </div>
         <script src="http://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
-        <script src="Public/Js/news.js"></script>
+        <script src="static/js/news.js"></script>
     </body>
 </html>
