Update: 添加GA统计代码

--- a/lib/View/news.html
+++ b/lib/View/news.html
@@ -29,5 +29,6 @@
         </div>
         <script src="http://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
         <script src="static/js/news.js"></script>
+        <script src="static/js/ga.js"></script>
     </body>
 </html>
