--- a/lib/View/index.html
+++ b/lib/View/index.html
@@ -12,5 +12,6 @@
     </head>
     <body>
         <img id="theme" title="<?=$this->e($title)?>" src="<?=$this->e($img)?>"/>
+        <script src="static/js/ga.js"></script>
     </body>
 </html>
